codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__approval_overlay__tests__approval_header_wrapped_url.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
assertion_line: 1462
expression: visible
---
Reason:
https://github.com/openai/codex/
pull/12345?diff=split

$ echo hi
