codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__approval_overlay__tests__approval_overlay_persistable_permissions_prompt.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
expression: "normalize_snapshot_paths(render_overlay_lines(&view, 60))"
---

  Would you like to grant these permissions?

  Reason: need workspace access

  Permission rule: network; read `/tmp/readme.txt`; write
  `/tmp/out.txt`

› 1. Yes, grant these permissions (y)
  2. Yes, always allow these permissions (p)
  3. Yes, grant these permissions for this session (a)
  4. No, continue without permissions (n)

  Press enter to confirm or esc to cancel
